[package]
name = "thread_pool"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-deque = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1"

[[bench]]
name = "throughput"
harness = false
